Fiks etter qa